samples/_failures_safe/1761597040_588ac3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c6d5ae8.c: In function ‘main’:
./samples/SAFE/__tmp_0c6d5ae8.c:146:9: error: expected expression at end of input
  146 |         if (rows_a != rows_b || cols_a != cols_b)
      |         ^~
./samples/SAFE/__tmp_0c6d5ae8.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c6d5ae8.c:146:9: error: expected declaration or statement at end of input
